[gd_scene load_steps=13 format=2]

[ext_resource path="res://drill/drill.png" type="Texture" id=1]
[ext_resource path="res://level_up.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/tileset_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://sound/swipe.ogg" type="AudioStream" id=4]
[ext_resource path="res://Match_3.gd" type="Script" id=5]
[ext_resource path="res://sound/swipe_2.ogg" type="AudioStream" id=6]
[ext_resource path="res://sound/ding.ogg" type="AudioStream" id=7]
[ext_resource path="res://sound/music.wav" type="AudioStream" id=8]
[ext_resource path="res://ui/04B_03.tres" type="DynamicFont" id=9]
[ext_resource path="res://ui/box.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("drill/AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 3 ), Vector2( 0, 0 ), Vector2( -5, 3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="root" type="Node2D"]

[node name="trashcan_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 5 )
difficulty = 2

[node name="swipe" type="AudioStreamPlayer" parent="grid"]
stream = ExtResource( 4 )

[node name="swipe2" type="AudioStreamPlayer" parent="grid"]
stream = ExtResource( 6 )

[node name="ding" type="AudioStreamPlayer" parent="grid"]
stream = ExtResource( 7 )

[node name="health" type="Node2D" parent="."]
z_index = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="health"]
texture = ExtResource( 10 )
centered = false

[node name="Label" type="Label" parent="health"]
margin_left = 44.0
margin_top = 4.0
margin_right = 593.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 9 )
text = "HEALTH: 100"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="drill" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="drill"]
scale = Vector2( 10, 10 )
frames = SubResource( 2 )
centered = false

[node name="world" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 0, 393216, 1, 0, 13, 2, 0, 393227, 3, 0, 7, 16, 0, 393222, 17, 0, 393217, 18, 0, 13, 19, 0, 7, 65536, 0, 131080, 65537, 0, 65546, 65538, 0, 196610, 65539, 0, 196623, 65552, 0, 393224, 65553, 0, 327694, 65554, 0, 65549, 65555, 0, 131087, 131072, 0, 262150, 131073, 0, 65538, 131074, 0, 65546, 131075, 0, 196623, 131088, 0, 327688, 131089, 0, 196609, 131090, 0, 327690, 131091, 0, 393231, 196608, 0, 262152, 196609, 0, 65537, 196610, 0, 262145, 196611, 0, 393231, 196624, 0, 131078, 196625, 0, 393226, 196626, 0, 196612, 196627, 0, 131087, 262144, 0, 196616, 262145, 0, 65538, 262146, 0, 589834, 262147, 0, 262151, 262160, 0, 131078, 262161, 0, 327692, 262162, 0, 65540, 262163, 0, 196615, 327680, 0, 327688, 327681, 0, 327694, 327682, 0, 196611, 327683, 0, 262159, 327696, 0, 262152, 327697, 0, 262145, 327698, 0, 131086, 327699, 0, 131087, 393216, 0, 524296, 393217, 0, 262146, 393218, 0, 131076, 393219, 0, 327695, 393232, 0, 65544, 393233, 0, 65539, 393234, 0, 262154, 393235, 0, 393231, 458752, 0, 196614, 458753, 0, 262146, 458754, 0, 262154, 458755, 0, 196615, 458768, 0, 262150, 458769, 0, 327693, 458770, 0, 327700, 458771, 0, 262151, 524288, 0, 327688, 524289, 0, 262145, 524290, 0, 131083, 524291, 0, 131087, 524304, 0, 131078, 524305, 0, 131085, 524306, 0, 393235, 524307, 0, 131079, 589824, 0, 131078, 589825, 0, 393229, 589826, 0, 131074, 589827, 0, 262159, 589840, 0, 196614, 589841, 0, 196610, 589842, 0, 262146, 589843, 0, 196623, 655360, 0, 131080, 655361, 0, 131084, 655362, 0, 65546, 655363, 0, 262159, 655376, 0, 393224, 655377, 0, 327690, 655378, 0, 196612, 655379, 0, 196623, 720896, 0, 65542, 720897, 0, 327692, 720898, 0, 196611, 720899, 0, 131087, 720912, 0, 262152, 720913, 0, 262148, 720914, 0, 65537, 720915, 0, 131079, 786432, 0, 327688, 786433, 0, 524298, 786434, 0, 524301, 786435, 0, 196623, 786448, 0, 196614, 786449, 0, 327692, 786450, 0, 524298, 786451, 0, 131079, 851968, 0, 131080, 851969, 0, 196612, 851970, 0, 262157, 851971, 0, 65543, 851984, 0, 393224, 851985, 0, 131081, 851986, 0, 327691, 851987, 0, 65543, 917504, 0, 589832, 917505, 0, 131073, 917506, 0, 196611, 917507, 0, 65543, 917520, 0, 131080, 917521, 0, 131083, 917522, 0, 262154, 917523, 0, 65543, 983040, 0, 196616, 983041, 0, 262148, 983042, 0, 65538, 983043, 0, 262151, 983056, 0, 131080, 983057, 0, 327699, 983058, 0, 65538, 983059, 0, 327695, 1048576, 0, 65542, 1048577, 0, 131081, 1048578, 0, 262157, 1048579, 0, 65551, 1048592, 0, 262152, 1048593, 0, 196611, 1048594, 0, 196618, 1048595, 0, 327695, 1114112, 0, 262152, 1114113, 0, 196610, 1114114, 0, 262145, 1114115, 0, 262151, 1114128, 0, 196616, 1114129, 0, 131074, 1114130, 0, 327692, 1114131, 0, 327695, 1179648, 0, 327688, 1179649, 0, 262147, 1179650, 0, 262154, 1179651, 0, 262151, 1179664, 0, 131080, 1179665, 0, 196611, 1179666, 0, 393235, 1179667, 0, 327695, 1245184, 0, 589832, 1245185, 0, 327691, 1245186, 0, 65546, 1245187, 0, 262159, 1245200, 0, 589832, 1245201, 0, 327689, 1245202, 0, 131082, 1245203, 0, 262151, 1310720, 0, 589832, 1310721, 0, 327700, 1310722, 0, 196618, 1310723, 0, 327695, 1310736, 0, 196616, 1310737, 0, 65537, 1310738, 0, 393236, 1310739, 0, 65543, 1376256, 0, 262150, 1376257, 0, 131081, 1376258, 0, 262145, 1376259, 0, 65543, 1376272, 0, 393224, 1376273, 0, 327694, 1376274, 0, 327690, 1376275, 0, 131087, 1441792, 0, 65542, 1441793, 0, 131074, 1441794, 0, 196611, 1441795, 0, 262159, 1441808, 0, 262150, 1441809, 0, 196621, 1441810, 0, 65549, 1441811, 0, 262159, 1507328, 0, 131078, 1507329, 0, 524298, 1507330, 0, 131083, 1507331, 0, 65543, 1507344, 0, 196614, 1507345, 0, 196610, 1507346, 0, 65538, 1507347, 0, 262151, 1572864, 0, 131078, 1572865, 0, 131085, 1572866, 0, 393226, 1572867, 0, 65551, 1572880, 0, 393224, 1572881, 0, 65537, 1572882, 0, 524298, 1572883, 0, 196615, 1638400, 0, 196614, 1638401, 0, 327690, 1638402, 0, 524298, 1638403, 0, 196615, 1638416, 0, 196614, 1638417, 0, 65538, 1638418, 0, 65549, 1638419, 0, 196623, 1703936, 0, 393224, 1703937, 0, 131073, 1703938, 0, 262148, 1703939, 0, 65551, 1703952, 0, 196614, 1703953, 0, 196609, 1703954, 0, 262154, 1703955, 0, 196615, 1769472, 0, 393224, 1769473, 0, 131075, 1769474, 0, 131084, 1769475, 0, 196615, 1769488, 0, 262152, 1769489, 0, 65537, 1769490, 0, 327692, 1769491, 0, 196623, 1835008, 0, 196616, 1835009, 0, 327690, 1835010, 0, 262145, 1835011, 0, 131087, 1835024, 0, 393224, 1835025, 0, 65549, 1835026, 0, 131075, 1835027, 0, 196615, 1900544, 0, 524296, 1900545, 0, 65538, 1900546, 0, 589834, 1900547, 0, 131087, 1900560, 0, 262152, 1900561, 0, 262147, 1900562, 0, 589837, 1900563, 0, 131087, 1966080, 0, 327688, 1966081, 0, 65539, 1966082, 0, 327691, 1966083, 0, 65551, 1966096, 0, 589832, 1966097, 0, 524301, 1966098, 0, 65546, 1966099, 0, 65543, 2031616, 0, 196614, 2031617, 0, 131082, 2031618, 0, 327694, 2031619, 0, 65551, 2031632, 0, 65544, 2031633, 0, 262146, 2031634, 0, 589834, 2031635, 0, 65543, 2097152, 0, 524296, 2097153, 0, 262147, 2097154, 0, 131086, 2097155, 0, 524300, 2097156, 0, 12, 2097157, 0, 393220, 2097158, 0, 12, 2097159, 0, 393227, 2097160, 0, 262155, 2097161, 0, 393219, 2097162, 0, 393219, 2097163, 0, 393220, 2097164, 0, 12, 2097165, 0, 12, 2097166, 0, 11, 2097167, 0, 262156, 2097168, 0, 262158, 2097169, 0, 65537, 2097170, 0, 327692, 2097171, 0, 196623, 2162688, 0, 131078, 2162689, 0, 131083, 2162690, 0, 131081, 2162691, 0, 196618, 2162692, 0, 65549, 2162693, 0, 393235, 2162694, 0, 65540, 2162695, 0, 131081, 2162696, 0, 262157, 2162697, 0, 262147, 2162698, 0, 262148, 2162699, 0, 327691, 2162700, 0, 262148, 2162701, 0, 131075, 2162702, 0, 131082, 2162703, 0, 393236, 2162704, 0, 262148, 2162705, 0, 65538, 2162706, 0, 327692, 2162707, 0, 327695, 2228224, 0, 524296, 2228225, 0, 327691, 2228226, 0, 393226, 2228227, 0, 262147, 2228228, 0, 131073, 2228229, 0, 524298, 2228230, 0, 262148, 2228231, 0, 327700, 2228232, 0, 65539, 2228233, 0, 196612, 2228234, 0, 196612, 2228235, 0, 131076, 2228236, 0, 589834, 2228237, 0, 327699, 2228238, 0, 262147, 2228239, 0, 65549, 2228240, 0, 196609, 2228241, 0, 131082, 2228242, 0, 262148, 2228243, 0, 131079, 2293760, 0, 458758, 2293761, 0, 458765, 2293762, 0, 458756, 2293763, 0, 458753, 2293764, 0, 458764, 2293765, 0, 458762, 2293766, 0, 458764, 2293767, 0, 458766, 2293768, 0, 196619, 2293769, 0, 458766, 2293770, 0, 65548, 2293771, 0, 458754, 2293772, 0, 458764, 2293773, 0, 458761, 2293774, 0, 458756, 2293775, 0, 458766, 2293776, 0, 458764, 2293777, 0, 458763, 2293778, 0, 458756, 2293779, 0, 458757 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 34.7755
margin_top = 1060.0
margin_right = 614.776
margin_bottom = 1129.0
custom_fonts/font = ExtResource( 9 )
text = "DEPTH: 0"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="ProgressBar" parent="."]
margin_left = 129.888
margin_top = 1006.58
margin_right = 513.888
margin_bottom = 1066.58
max_value = 10.0
step = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" parent="." instance=ExtResource( 2 )]
visible = false
z_index = 1

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 0.5
autoplay = true
mix_target = 2

[connection signal="timeout" from="trashcan_timer" to="grid" method="_on_trashcan_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timeout"]
[connection signal="GUI_CLOSE" from="Container" to="grid" method="_on_level_GUI_CLOSE"]
